--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -24,9 +24,14 @@ jobs:
           npm -v
           node -v
           yarn -v
+          env GIT_TERMINAL_PROMPT=1 go get https://code.guanmai.cn/fe-x/gm_api.git
           git config --global user.email "gmfe4code@163.com"
           git config --global user.name "gmfe4code"
-
       - run: |
           pwd
           git clone https://github.com/gmfe/gm-pc.git
+      - run: |
+          cd gm-pc
+          yarn
+          npx lerna bootstrap
+          npm run build
