--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -26,6 +26,7 @@ jobs:
           yarn -v
           git config --global user.email "gmfe4code@163.com"
           git config --global user.name "gmfe4code"
+          git config --global url.ssh://git@code.guanmai.cn/.insteadOf https://code.guanmai.cn/
       - run: |
           pwd
           git clone https://github.com/jaweii/ci-test.git
