--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -21,7 +21,6 @@ jobs:
     steps:
       # 环境
       - run: |
-          apt-get -y install build-essential nghttp2 libnghttp2-dev libssl-dev
           npm -v
           node -v
           yarn -v
@@ -32,4 +31,5 @@ jobs:
           git clone https://github.com/jaweii/ci-test.git
       - run: |
           cd ci-test
+          yarn add git+https://code.guanmai.cn/fe-x/gm_api.git#79aa5ce2bc952a93c0e6a98c58c7ab547f9bcb32
           yarn
