--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -21,6 +21,7 @@ jobs:
     steps:
       # 环境
       - run: |
+          npm install -g npm@latest
           npm -v
           node -v
           yarn -v
