--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -31,4 +31,6 @@ jobs:
           git clone https://github.com/jaweii/ci-test.git
       - run: |
           cd ci-test
+          npm cache clean
+          rm -rf node_modules
           npm install git+https://code.guanmai.cn/fe-x/gm_api.git#79aa5ce2bc952a93c0e6a98c58c7ab547f9bcb32
