--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -21,19 +21,37 @@ jobs:
     steps:
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
+      - name: PUB
+        uses: shimataro/ssh-key-action@v2
         with:
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          name: id_rsa # optional
+          key: ${{ secrets.SSH_PUB_KEY }}
+          name: id_ed25519.pub
           known_hosts: unnecessary
-          if_key_exists: replace # replace / ignore / fail; optional (defaults to fail)
+          config: |
+            Host bastion
+              # HostName xxx.xxx.xxx.xxx
+              # User user-of-bastion
+              IdentityFile ~/.ssh/id_ed25519.pub
+      - name: PRIVATE
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.SSH_KEY_OF_TARGET }}
+          name: id_rsa-target
+          known_hosts: unnecessary
+          config: |                                         # will be appended to existing .ssh/config
+            Host target
+              # HostName yyy.yyy.yyy.yyy
+              # User user-of-target
+              IdentityFile ~/.ssh/id_ed25519
+              # ProxyCommand ssh -W %h:%p bastion
 
       # 环境
       - run: |
           npm -v
           node -v
           yarn -v
-          # git config --global user.email "zhujiawei@guanmai.cn"
-          # git config --global user.name "jawei"
+          git config --global user.email "zhujiawei@guanmai.cn"
+          git config --global user.name "jawei"
           git config --global url.ssh://git@code.guanmai.cn/.insteadOf https://code.guanmai.cn/
       - run: |
           pwd
