--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -46,4 +46,5 @@ jobs:
           git clone https://github.com/jaweii/ci-test.git
       - run: |
           cd ci-test
+          ssh -vvv git@code.guanmai.cn
           npm install git+https://code.guanmai.cn/fe-x/gm_api.git#79aa5ce2bc952a93c0e6a98c58c7ab547f9bcb32
