--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -24,14 +24,14 @@ jobs:
         with:
           key: ${{ secrets.SSH_PUB_KEY }}
           name: id_ed25519.pub
-          known_hosts: unnecessary
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
           
       - name: PRIVATE
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           name: id_ed25519
-          known_hosts: unnecessary
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
           
       # 环境
       - run: |
@@ -46,6 +46,5 @@ jobs:
           git clone https://github.com/jaweii/ci-test.git
       - run: |
           cd ci-test
-          chmod o+rw /dev/tty
           ssh -vvv git@code.guanmai.cn
           npm install git+https://code.guanmai.cn/fe-x/gm_api.git#79aa5ce2bc952a93c0e6a98c58c7ab547f9bcb32
